#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#

TAG: pwi-6-0-26-6
DATE: 10/22/2025
STAFF: lec
wts2-1746/sprt-105/PWI EMAPA Browser: add count of HT samples
        modified:   pwi/static/app/edit/emapa/emapa_browser_content.html

TAG: pwi-6-0-26-5
TAG: pwi-6-0-26-4
DATE: 10/16/2025
STAFF: lec
wts2-1743/sprt-94/Remove PRO lit triage workflow
        modified:   pwi/static/app/edit/triage/help.html
        modified:   pwi/static/app/edit/triage/lit_triage_content.html

TAG: pwi-6-0-26-3
DATE: 09/25/2025
STAFF: lec
wts2-1726/sprt-68/Marker Module Regulates Expression paste function not working
        modified:   pwi/static/app/edit/markerfear/MarkerFearController.js

TAG: pwi-6-0-26-2
DATE: 09/04/2025
STAFF: lec
wts2-1723/sprt-47/P-WI Add 2 notes to Notes picklist - GXD Index module
        modified:   pwi/static/app/edit/gxd/GxdIndexController.js

TAG: pwi-6-0-26-1
DATE: 07/28/2025
STAFF: lec
wts2-1707/e4g-320/GXD HT Index : Make the PubMed ID field in the GXD HT indexing module searchable
        modified:   pwi/static/app/edit/gxd/EvaluationController.js

TAG: pwi-6-0-25-7
DATE: 05/27/2025
STAFF: lec
wts2-1666/e4g-264/python 3.12 and cherryPy 18.10.0
        modified:   requirements.txt

TAG: pwi-6-0-25-6
DATE: 05/28/2025
STAFF: lec
e4g-270/HT Experiment PWI: Move Experimental Variables
        modified:   pwi/static/app/edit/gxd/gxd_ht_results_content.html

TAG: pwi-6-0-25-5
DATE: 05/21/2025
STAFF: lec
wts2-1666/e4g-261/Address Dependabot findings : PWI
        modified:   requirements.txt

TAG: pwi-6-0-25-4
DATE: 04/27/2025
STAFF: lec
wts2-1645/e4g-226/HT indexing module: changing repository link out urls to https format
        modified:   pwi/static/app/edit/gxd/gxd_ht_results_content.html

TAG: pwi-6-0-25-3
DATE: 04/04/2025
STAFF: lec
wts2-1639/e4g-209/P-WI - Autopopulate buttons in Probes Module
        modified:   pwi/static/app/edit/probe/ProbeController.js