@@ -152,8 +152,10 @@
             </dl>
                         <div id="detailLinks">
                             <span class="resultsLink">
-                                <a target="_blank" href="{{ url_for('pwi.resultsummary', {celltype_id:vm.selectedTerm.primaryid} ) }}">{{vm.selectedTerm.annotCount}}</a>
-		  	direct annotations 
+                                {{vm.selectedTerm.gxdhtSampleCount}} samples
+                            </span>
+                            <span class="resultsLink">
+                                <a target="_blank" href="{{ url_for('pwi.resultsummary', {celltype_id:vm.selectedTerm.primaryid} ) }}">{{vm.selectedTerm.annotCount}}</a> direct annotations 
                             <span class="resultsLink">
                                 <a class="external" target="_blank" href=" https://bioportal.bioontology.org/ontologies/CL?p=classes&conceptid={{vm.selectedTerm.primaryid}}">BioPortal</a>
                             </span>
