@@ -2,11 +2,14 @@
 # if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
 #
 
+TAG: pwi-6-0-26-7
 TAG: pwi-6-0-26-6
-DATE: 10/22/2025
+DATE: 10/23/2025
 STAFF: lec
 wts2-1746/sprt-105/PWI EMAPA Browser: add count of HT samples
+wts2-1748/sprt-106/PWI CL Browser: add count of HT samples
         modified:   pwi/static/app/edit/emapa/emapa_browser_content.html
+        modified:   pwi/static/app/edit/celltype/celltype_browser_content.html
 
 TAG: pwi-6-0-26-5
 TAG: pwi-6-0-26-4
